--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,314 @@
-/* место для вашего кода */
+.header { /*задаем высоту и внутренние отступы для грида*/
+  height: 293px;
+  padding: 92px 24px;
+}
+
+.header_grid_container { /*создаем грид с 3-мя колонками*/
+  display: grid;
+  height: 100%;
+  grid-template-columns: 2fr 1fr 2fr;
+}
+
+.header__menu {
+grid-column: 1;
+place-content:  center;
+}
+/* список в наве */
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: right; 
+  list-style: circle;
+  font-size: 18px;
+  margin-right: 5px;
+  gap: 33px;
+}
+
+.header__links-list-item {
+  /* !!!!!!!!!!!!!! */
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+  margin-left: 0;
+} 
+
+/* стилизация ссылок в списке */
+.header__link { /*опускаем подчеркивающую линию*/
+   text-underline-offset: 5px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+/* логотип */
+.header__logo {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+ }
+
+.header__logo-image {
+  width: 138px;
+ }
+ /* адрес */
+.address { /*обнуление стилей*/
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+}
+
+.header__address {
+  display: block;
+  width: 240.52px;
+  margin-left: auto;
+  font-size: 18px;
+  text-underline-offset: 5px;
+  margin-top: 7px;
+  margin-right: 25px;
+  line-height: 24px;
+}
+
+/* входная секция */
+
+/* .overlay {
+  
+  background-image: url("../images/cover.jpg");
+  background-size: cover;
+  height: 757px;
+  opacity: 0.5;
+  background-position: center;
+  z-index: -10;
+} */
+.cover {
+  height: 757px;
+  margin-bottom: 179px;
+  position: relative;
+  background-image: url("../images/cover.jpg");
+  background-size: cover;
+  background-position: center;
+ }
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.cover__title {
+  text-transform: uppercase;
+  position: absolute;
+  color: #fff;
+  font-size: 67px;
+  z-index: 2;
+  width: 100%;
+
+}
+
+/* выравнивание надписи */
+
+.cover__title__items {
+  padding-top: 166px;
+    padding-left: 49px;
+    padding-right: 49px;
+   
+}
+
+.aligned-text {
+  display: block;
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  display: block;
+  text-align: center;
+  margin: 8px 0 4px;
+  letter-spacing: 30px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  letter-spacing: 30px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 57px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 125px 50px 51px 79px;
+}
+
+.cover__description-text {
+  text-transform: uppercase;
+  font-size: 22px;
+  word-spacing: 18.4px;
+  padding-top: 13px;
+}
+
+.bet-button {
+  all: unset;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 22px;
+  background-color: transparent;
+  border: solid 1px white;
+  padding: 11px 33px 10px 29px;
+  z-index: 3;
+  cursor: pointer;
+}
+
+/* карточки */
+.lots {
+  
+  margin: 0 24px 0;
+  width: 1052px;
+  height: 692px;
+    
+
+}
+
+.lots_header {
+  text-transform: uppercase;
+  padding-left: 40px;
+  font-size: 40px;
+
+}
+
+.lots__list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 27px;
+ justify-content: space-between;
+ 
+}
+
+.lots__list_item {
+  width: 334px;
+  height: 563px;
+  /* flex-grow: 1   попробовать применить это свойство*/
+  position: relative;
+}
+
+.lots__list_link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
+
+.card_item {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  padding-top: 51px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 48px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title{
+  width: 100%;
+  font-size: 22px;
+  
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+  line-height: 120%;
+  
+}
+
+.lots__look-more-link {
+  display: block;
+  padding-top: 31px;
+  padding-left: 40px;
+  font-size: 20px;
+  text-underline-offset: 5px;
+}
+
+.about {
+  padding:  184px 24px 50px;
+  
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+
+  justify-items: center;
+}
+
+.about__logo {
+  display: flex;
+  height: 240px;
+  width: 240px;
+  background-color: black;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+
+  
+  padding: 20px;
+}
+
+.about__logo-image {
+  /* position: absolute; */
+  height: 114px;
+  width: 148px;
+background-image: url(../images/logo-white.svg);
+}
+
+.about__description{
+  padding-top: 99px;
+  padding-right: 0px;
+  padding-left: 25px;
+}
+
+.about__title {
+text-transform: uppercase;
+font-size: 40px;
+font-weight: bold;
+}
+
+.about__text {
+  padding-top: 100px;
+  padding-right: 10;
+  font-size: 20px;
+  width: ;
+}
+
+.about__text_paragraph_1 {
+  margin-bottom: 24px;
+  padding-right: 24px;
+}
+
